[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/shared/projectile_homing.gd" type="Script" id=1]
[ext_resource path="res://scenes/shared/projectile.tscn" type="PackedScene" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.25

[node name="projectile" instance=ExtResource( 2 )]
script = ExtResource( 1 )
lifespan = 7.0
steering = 0.4
launch_time = 0.1

[node name="Area" type="Area" parent="." index="1"]
collision_layer = 0
collision_mask = 0
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
shape = SubResource( 1 )

[node name="JustLaunched" type="Timer" parent="." index="2"]
one_shot = true

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="JustLaunched" to="." method="_on_JustLaunched_timeout"]
